edit changing 'bosh' to 'microbosh' as needed in deploy-microbosh-to-aws.html

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -47,9 +47,9 @@ cloud:
       access_key_id: ACCESS-KEY-ID # Replace with your AWSAccessKeyId
       secret_access_key: SECRET-ACCESS-KEY # Replace with your AWSSecretKey
       region: us-east-1
-      default_key_name: bosh
-      default_security_groups: ["bosh"]
-      ec2_private_key: ./bosh.pem # Path relative to this manifest file
+      default_key_name: microbosh
+      default_security_groups: ["microbosh"]
+      ec2_private_key: ./microbosh.pem # Path relative to this manifest file
 
 apply_spec:
   agent:
@@ -115,7 +115,7 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. If you
 
 1. Complete the VPC form with the following information:
     * **IP CIDR block**: 10.0.0.0/16
-    * **VPC name**: bosh
+    * **VPC name**: microbosh
     * **Public subnet**: 10.0.0.0/24
     * **Availability Zone**: us-east-1a
     * **Subnet name**: Public subnet
@@ -154,18 +154,18 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. If you
 
     <%= image_tag("images/deploy-microbosh-to-aws/list-key-pairs.png") %>
 
-1. In the Create Key Pair dialog box, enter "bosh" as the Key Pair name and click **Create**.
+1. In the Create Key Pair dialog box, enter "microbosh" as the Key Pair name and click **Create**.
 
     The value for the `default_key_name` in the manifest is already set to "bosh".
 
     <%= image_tag("images/deploy-microbosh-to-aws/create-key-pair.png") %>
 
-    A bosh.pem file downloads automatically.
+    A microbosh.pem file downloads automatically.
 
-1. Move the bosh.pem file into your deployment directory. For example, on UNIX run this command:
+1. Move the microbosh.pem file into your deployment directory. For example, on UNIX run this command:
 
     <pre class="terminal">
-    $ mv ~/Downloads/bosh.pem ~/micro-deployment/bosh.pem
+    $ mv ~/Downloads/microbosh.pem ~/micro-deployment/microbosh.pem
     </pre>
 
     <p class="note"><strong>Note</strong>: The value for the <code>ec2_private_key</code> in the manifest is already set.</p>
@@ -178,23 +178,23 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. If you
     <%= image_tag("images/deploy-microbosh-to-aws/list-security-groups.png") %>
 
 1. Complete the Create Security Group form with the following information and click **Create**:
-    * **Security group name**: bosh
+    * **Security group name**: microbosh
     * **Description**: MicroBOSH deployed VMs
-    * **VPC**: Select the "bosh" VPC that you created in [Create a Virtual Private Cloud](#create-vpc).
+    * **VPC**: Select the "microbosh" VPC that you created in [Create a Virtual Private Cloud](#create-vpc).
 
     <br/>
 
     <%= image_tag("images/deploy-microbosh-to-aws/create-security-group.png") %>
 
-    <p class="note"><strong>Note</strong>: The value for the <code>default_security_groups</code> in the manifest is already set to "bosh". It is the <strong>Group Name</strong> of your VPC Security Group, not the security group ID.</p>
+    <p class="note"><strong>Note</strong>: The value for the <code>default_security_groups</code> in the manifest is already set to "microbosh". It is the <strong>Group Name</strong> of your VPC Security Group, not the security group ID.</p>
 
-1. Select the created security group with group name "bosh", click the **Inbound** tab and click **Edit**.
+1. Select the created security group with group name "microbosh," click the **Inbound** tab and click **Edit**.
 
     <%= image_tag("images/deploy-microbosh-to-aws/open-edit-security-group-modal.png") %>
 
 1. Complete the **Edit inbound rules** form and click **Save**.
 
-    <p class="note"><strong>Note</strong>: To enter the ID of the "bosh" security group for the <strong>Custom IP</strong> field, select the ID field and type the first character of the "bosh" <strong>Group ID</strong> value. The AWS Console displays an autocomplete list. Select the correct ID.</p>
+    <p class="note"><strong>Note</strong>: To enter the ID of the "microbosh" security group for the <strong>Custom IP</strong> field, select the ID field and type the first character of the "microbosh" <strong>Group ID</strong> value. The AWS Console displays an autocomplete list. Select the correct ID.</p>
 
     <%= image_tag("images/deploy-microbosh-to-aws/edit-security-group-rules.png") %>
 
