edit changing 'bosh' to 'microbosh' as needed in deploy-microbosh-to-aws.html

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -156,7 +156,7 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. If you
 
 1. In the Create Key Pair dialog box, enter "microbosh" as the Key Pair name and click **Create**.
 
-    The value for the `default_key_name` in the manifest is already set to "bosh".
+    The value for the `default_key_name` in the manifest is already set to "microbosh".
 
     <%= image_tag("images/deploy-microbosh-to-aws/create-key-pair.png") %>
 
