--- a/networks.html.md.erb
+++ b/networks.html.md.erb
@@ -240,29 +240,11 @@ In the above example, VM allocated to `my-multi-homed-job` deployment job will h
 
 The Director does not enforce how many networks can be assigned to each job instance; however, each CPI might impose custom requirements either due to the IaaS limitations or simply because support was not yet implemented.
 
-vSphere CPI supports:
-
-- Multiple static networks for each job instance
-- No dynamic networks since vSphere does not manage IP assignments
-- No vip networks since vSphere does not have an elastic/floating IP concept
-
-AWS CPI supports:
-
-- Single static network for each job instance
-- Single dynamic network for each job instance
-- Single vip network which corresponds to an elastic IP
-
-OpenStack CPI supports:
-
-- Multiple static networks for each job instance
-- Single dynamic network for each job instance
-- Single vip network which corresponds to a floating IP
-
-vCloud CPI supports:
-
-- Multiple static networks for each job instance
-- No dynamic networks since vSphere does not manage IP assignments
-- No vip networks since vSphere does not have an elastic/floating IP concept
+|                | static                    | dynamic                 | vip                                  |
+|----------------|---------------------------|-------------------------|--------------------------------------|
+| AWS            | Single per job instance   | Single per job instance | Single, corresponds to an elastic IP |
+| OpenStack      | Multiple per job instance | Single per job instance | Single, corresponds to a floating IP |
+| vSphere/vCloud | Multiple per job instance | Not supported           |                                      |
 
 ---
 ## <a id='cloud-properties'></a> CPI Specific `cloud_properties`
