edit passive voice in deploy-microbosh-to-aws.html

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -82,7 +82,7 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. If you
 
     <%= image_tag("images/deploy-microbosh-to-aws/security-credentials-menu.png") %>
 
-1. If the AWS IAM confirmation box is presented, click **Continue to Security Credentials** to display the Security Credentials page.
+1. If the AWS IAM confirmation box appears, click **Continue to Security Credentials** to display the Security Credentials page.
 
 1. Expand the **Access Keys** section and click **Create New Access Key**.
 
