change bulleted list to numbered in  deploy_microbosh_to_aws.html

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -64,11 +64,11 @@ apply_spec:
 
 To configure your AWS account for MicroBOSH:
 
-* [Obtain AWS credentials](#credentials)
-* [Create a Virtual Private Cloud (VPC)](#create-vpc)
-* [Create an Elastic IP](#create-eip)
-* [Create a Key Pair](#create-key-pair)
-* [Create and Configure Security Group](#create-security)
+1. [Obtain AWS credentials](#credentials)
+1. [Create a Virtual Private Cloud (VPC)](#create-vpc)
+1. [Create an Elastic IP](#create-eip)
+1. [Create a Key Pair](#create-key-pair)
+1. [Create and Configure Security Group](#create-security)
 
 ### <a id="credentials"></a> Obtain AWS Credentials
 
