fix link and edit sentence in deploy_microbosh_to_aws.html

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -281,8 +281,8 @@ Your AWS credentials consist of an Access Key ID and a Secret Access Key. If you
     </pre>
 
     <p class="note"><strong>Notes</strong>:
-    * If you receive an `Unknown command` error message, you might not have installed the (cf CLI MicroBOSH plugin)[bosh-cli.html]. Run `gem install bosh_cli_plugin_micro`. `bosh help` displays commands that begin with `micro` when you successfully install the plugin.
-    * BOSH displays a red <code>WARNING!</code> message. This is not an error message. The message alerts you to a change in the targeted IP address.</p>
+    * If you receive an `Unknown command` error message, you might not have installed the <a href="http://bosh.io/docs/bosh-cli.html">cf CLI MicroBOSH plugin</a>. Run `gem install bosh_cli_plugin_micro`. `bosh help` displays commands that begin with `micro` when you successfully install the plugin.
+    * BOSH displays a red <code>WARNING!</code> message that is not an error message. The message alerts you to a change in the targeted IP address.</p>
 
 1. Run `bosh micro deploy STEMCELL-NAME` to deploy MicroBOSH.
 
