fix microbosh manifest for vsphere

--- a/deploy-microbosh-to-vsphere.html.md.erb
+++ b/deploy-microbosh-to-vsphere.html.md.erb
@@ -37,7 +37,7 @@ network:
   gateway: 10.0.0.1
   dns:     [10.0.0.2]
   cloud_properties:
-    network: VSPHERE-NETWORK-NAME
+    name: VSPHERE-NETWORK-NAME
 
 resources:
   persistent_disk: 20000
